updated html and css

--- a/index.html
+++ b/index.html
@@ -37,14 +37,34 @@
                 </div>
             </div>
             <div class="playingArea" id="playingArea">
-                <div class="player1" id="player1">
-                    <!-- html to be appended -->
+                <div class="winner">
+                    <h2>winner!!!</h2>
                 </div>
-                <div class="player2" id="player2">
-                    <!-- html to be appended -->
-                </div>
-                <div class="player3" id="player3">
-                    <!-- html to be appended -->
+                <div class="players">
+                    <div class="player1" id="player1">
+                        <div class="p1C1" id="p1C1">
+                            <!-- html to be appended -->
+                        </div>
+                        <div class="p1C2" id="p1C2">
+                            <!-- html to be appended -->
+                        </div>
+                    </div>
+                    <div class="player2" id="player2">
+                        <div class="p2C1" id="p2C1">
+                            <!-- html to be appended -->
+                        </div>
+                        <div class="p2C2" id="p2C2">
+                            <!-- html to be appended -->
+                        </div>
+                    </div>
+                    <div class="player3" id="player3">
+                        <div class="p3C1" id="p3C1">
+                            <!-- html to be appended -->
+                        </div>
+                        <div class="p3C2" id="p3C2">
+                            <!-- html to be appended -->
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
@@ -52,7 +72,7 @@
     <footer>
         <div class="footnotes">
             <a href="https://junocollege.com/">Created at Juno College by Dana McIvor & Stephen Schooley</a>
-            <a href="">This product uses the Deck of Cards API</a>
+            <a href="https://deckofcardsapi.com/">This product uses the Deck of Cards API</a>
         </div>
     </footer>
     <script src="./script/script.js"></script>
