--- a/index.html
+++ b/index.html
@@ -37,31 +37,33 @@
                 </div>
             </div>
             <div class="playingArea" id="playingArea">
-                <div class="winner">
-                    <h2>winner!!!</h2>
                 </div>
                 <div class="players">
+                    <h2 class="tie">tie</h2>
                     <div class="player1" id="player1">
-                        <div class="p1C1" id="p1C1">
+                        <h2 class="winner1">winner!!!</h2>
+                        <div id="player1Card1">
                             <!-- html to be appended -->
                         </div>
-                        <div class="p1C2" id="p1C2">
+                        <div id="player1Card2">
                             <!-- html to be appended -->
                         </div>
                     </div>
                     <div class="player2" id="player2">
-                        <div class="p2C1" id="p2C1">
+                        <h2 class="winner2">winner!!!</h2>
+                        <div id="player2Card1">
                             <!-- html to be appended -->
                         </div>
-                        <div class="p2C2" id="p2C2">
+                        <div id="player2Card2">
                             <!-- html to be appended -->
                         </div>
                     </div>
-                    <div class="player3" id="player3">
-                        <div class="p3C1" id="p3C1">
+                    <div id="player3">
+                        <h2 class="winner3">winner!!!</h2>
+                        <div id="player3Card1">
                             <!-- html to be appended -->
                         </div>
-                        <div class="p3C2" id="p3C2">
+                        <div id="player3Card2">
                             <!-- html to be appended -->
                         </div>
                     </div>
