updated html, css, js

--- a/index.html
+++ b/index.html
@@ -37,32 +37,39 @@
                 </div>
             </div>
             <div class="playingArea" id="playingArea">
-                <div class="winner">
-                    <h2>winner!!!</h2>
-                </div>
+                <h2 class="tie">tie</h2>
                 <div class="players">
                     <div class="player1" id="player1">
-                        <div class="p1C1" id="p1C1">
-                            <!-- html to be appended -->
-                        </div>
-                        <div class="p1C2" id="p1C2">
-                            <!-- html to be appended -->
+                        <h2 class="winner1">winner!!!</h2>
+                        <div class="player1Cards" id="player1Cards">
+                            <div id="player1Card1">
+                                <!-- html to be appended -->
+                            </div>
+                            <div id="player1Card2">
+                                <!-- html to be appended -->
+                            </div>
                         </div>
                     </div>
                     <div class="player2" id="player2">
-                        <div class="p2C1" id="p2C1">
-                            <!-- html to be appended -->
-                        </div>
-                        <div class="p2C2" id="p2C2">
-                            <!-- html to be appended -->
+                        <h2 class="winner2">winner!!!</h2>
+                        <div class="player2Cards" id="player2Cards">
+                            <div id="player2Card1">
+                                <!-- html to be appended -->
+                            </div>
+                            <div id="player2Card2">
+                                <!-- html to be appended -->
+                            </div>
                         </div>
                     </div>
                     <div class="player3" id="player3">
-                        <div class="p3C1" id="p3C1">
-                            <!-- html to be appended -->
-                        </div>
-                        <div class="p3C2" id="p3C2">
-                            <!-- html to be appended -->
+                        <h2 class="winner3">winner!!!</h2>
+                        <div class="player3Cards" id="player3Cards">
+                            <div id="player3Card1">
+                                <!-- html to be appended -->
+                            </div>
+                            <div id="player3Card2">
+                                <!-- html to be appended -->
+                            </div>
                         </div>
                     </div>
                 </div>
