updated, no reset

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                             <img src="./assets/1063_4suits_cd.png" alt="the card suits clubs and diamonds symbols">
                         </div>
                     </div>
-                    <p>Click the deck to start!</p>
+                    <p>Click the deck to start playing!<br>Players will be dealt 2 cards.<br>Aces always value 11.<br>After the winner is declared,<br>Click RESET to clear the table & play again!</p>
                 </div>
                 <div class="cardsToDeal" id="cardstoDeal">
                     <button class="button1">
